--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -22,7 +22,7 @@
     /* Typography */
     --font-family: 'Avenir LT Std';
     --font-size-xs: 13px;
-    --font-size-sm: 16px;
+    --font-size-sm: 18px;
     --font-size-base: 18px;
     --font-size-lg: 42px;
     --font-size-xl: 56px;
@@ -353,7 +353,7 @@ body {
 
 .radio-label {
     color: #fff;
-    font-size: 16px;
+    font-size: var(--font-size-base);;
 }
 
 /* File Upload Styles
@@ -372,7 +372,7 @@ body {
     border-radius: 4px;
     cursor: pointer;
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     transition: background-color 0.3s ease;
 }
 
@@ -383,7 +383,7 @@ body {
 .file-name {
     color: rgba(255, 255, 255, 0.6);
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
 }
 
 .file-input {
@@ -402,7 +402,7 @@ body {
    ========================================================================== */
    .description-text {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: rgba(255, 255, 255, 0.6);
     margin: 8px 0;
 }
@@ -410,13 +410,13 @@ body {
 .upload-guidelines {
     margin-top: 16px;
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: rgba(255, 255, 255, 0.6);
 }
 
 .guidelines-title {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: rgba(255, 255, 255, 0.6);
     margin-bottom: 8px;
 }
@@ -429,7 +429,7 @@ body {
 
 .guidelines-list li {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: rgba(255, 255, 255, 0.6);
     line-height: 1.6;
     margin-bottom: 4px;
@@ -462,7 +462,7 @@ body {
     color: white;
     padding: 5px 10px;
     border-radius: 4px;
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     white-space: nowrap;
     z-index: 100;
     margin-top: 5px;
