--- a/public/css/home.css
+++ b/public/css/home.css
@@ -30,7 +30,7 @@
 
     /* Typography */
     --font-family: 'Avenir LT Std', sans-serif;
-    --font-size-sm: 16px;
+    --font-size-sm: 18px;
     --font-size-base: 18px;
     --font-size-lg: 20px;
     --font-size-xl: 24px;
@@ -419,7 +419,7 @@ body {
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 8px;
     color: white;
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     width: 100%;
 }
 
@@ -454,7 +454,7 @@ select {
     border-radius: 8px;
     color: white;
     cursor: pointer;
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     transition: all 0.3s ease;
 }
 
@@ -469,7 +469,7 @@ select {
     border-radius: 8px;
     color: black;
     cursor: pointer;
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     transition: all 0.3s ease;
 }
 
@@ -519,7 +519,7 @@ label {
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 8px;
     color: white;
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     cursor: pointer;
     transition: all 0.3s ease;
 }
@@ -530,7 +530,7 @@ label {
 
 #file-chosen {
     color: rgba(255, 255, 255, 0.5);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
 }
 
 input[type="file"] {
@@ -608,7 +608,7 @@ input[type="file"] {
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 8px;
     color: white;
-    font-size: 16px;
+    font-size: var(--font-size-base);;
 
 }
 
@@ -647,7 +647,7 @@ select {
     border-radius: 8px;
     color: white;
     cursor: pointer;
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     transition: all 0.3s ease;
 }
 
@@ -662,7 +662,7 @@ select {
     border-radius: 8px;
     color: black;
     cursor: pointer;
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     transition: all 0.3s ease;
 }
 
