--- a/public/css/media-show.css
+++ b/public/css/media-show.css
@@ -3,8 +3,8 @@
 
     /* Typography */
     --font-family: 'Avenir LT Std', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, sans-serif;
-    --font-size-sm: 16px;
-    --font-size-base: 16px;
+    --font-size-sm: 18px;
+    --font-size-base: 18px;
     --font-size-lg: 18px;
     --font-size-xl: 24px;
     --font-size-2xl: 28px;
@@ -70,7 +70,7 @@ body {
     position: absolute;
     bottom: 95px;
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     font-weight: 500;
     padding-left: 70px;
     padding-right: 70px;
@@ -147,7 +147,7 @@ body {
 
 .article-date {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: #ffffff;
 }
 
@@ -175,19 +175,19 @@ body {
 
 .author-name {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: #ffffff;
 }
 
 .author-role {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: #A1A1AA;
 }
 
 .article-category {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     font-weight: 500;
     color: #ffffff;
     padding: 12px 12px;
@@ -239,7 +239,7 @@ body {
 }
 
 .nav-button span {
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: #ffffff;
     letter-spacing: 0.5px;
     display: flex;
@@ -255,7 +255,7 @@ body {
 }
 
 .nav-button span i {
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     background: #27272A;
     width: 24px;
     height: 24px;
@@ -274,7 +274,7 @@ body {
 
 /* Main Content */
 .article-content {
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     line-height: 1.8;
     color: #333;
     background: transparent;
@@ -302,7 +302,7 @@ body {
     font-family: var(--font-family);
     margin-top: 20px;
     padding-top: 20px;
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: #EFA32F;
     background: transparent;
 }
@@ -431,7 +431,7 @@ body {
 }
 
 .guest-label {
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     font-weight: 500;
     text-transform: uppercase;
     margin-bottom: 5px;
@@ -446,7 +446,7 @@ body {
 }
 
 .guest-position {
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     opacity: 0.9;
 }
 
