--- a/public/css/portfolio-show.css
+++ b/public/css/portfolio-show.css
@@ -14,6 +14,7 @@
     --color-gray-900: #111827;
     --color-border: #3F3F46;
     --font-family: 'Avenir LT Std', sans-serif;
+    --font-size-base: 18px;
 }
 
 @font-face {
@@ -95,7 +96,7 @@ margin: 0 auto;
 .article-subtitle p {
     font-family: var(--font-family);
     color: #FFFFFF;
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     line-height: 1.4;
 }
 
@@ -145,7 +146,7 @@ margin: 0 auto;
 
 .article-date {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: #ffffff;
 }
 
@@ -167,19 +168,19 @@ margin: 0 auto;
 
 .author-name {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: #ffffff;
 }
 
 .author-role {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: #A1A1AA;
 }
 
 .article-category {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     font-weight: 500;
     color: #ffffff;
     padding: 12px 12px;
@@ -193,7 +194,7 @@ margin: 0 auto;
 .article-content {
     font-family: var(--font-family);
     margin-top: 0px;
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: #FFFFFF;
 }
 
@@ -211,7 +212,7 @@ margin: 0 auto;
 
 .company-description {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     line-height: 1.6;
     margin-bottom: 40px;
     color: #FFFFFF;
@@ -232,7 +233,7 @@ margin: 0 auto;
 }
 
 .info-label {
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     font-weight: 500;
     color: #FFFFFF;
     text-transform: uppercase;
@@ -240,7 +241,7 @@ margin: 0 auto;
 }
 
 .info-value {
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: #FFFFFF;
     text-align: right;
     flex: 1;
@@ -365,7 +366,7 @@ margin: 0 auto;
 
 .sdg-content p {
     font-family: var(--font-family);
-    font-size: 16px;
+    font-size: var(--font-size-base);;
     color: #A1A1AA;
     margin-top:5px;
 }
